# routes/tutoria.routes.js
@@ -1,11 +1,0 @@
-const express = require('express');
-const router = express.Router();
-const tutoriaController = require('../controllers/tutoriaController');
-
-// Ruta para publicar una tutoría (solo para profesores)
-router.post('/publicar', tutoriaController.publicarTutoria);
-
-// Ruta para listar tutorías disponibles
-router.get('/disponibles', tutoriaController.listarTutoriasDisponibles);
-
-module.exports = router;
